force-app/main/default/objects/InvoiceItems__c/InvoiceItems__c.object-meta.xml
<CustomObject>
    <label>Item da Nota Fiscal</label>
    <nameField>
        <label>Item da Nota Fiscal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens da Nota Fiscal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>