force-app/main/default/objects/InvoiceItems__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <label>Código de Barras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>