force-app/main/default/objects/InvoiceItems__c/fields/Cfop__c.field-meta.xml
<CustomField>
    <fullName>Cfop__c</fullName>
    <label>Cfop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>