force-app/main/default/objects/InvoiceItems__c/fields/CofinsAliquot__c.field-meta.xml
<CustomField>
    <fullName>CofinsAliquot__c</fullName>
    <label>Alíquota de Cofins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>