force-app/main/default/objects/InvoiceItems__c/fields/CofinsBase__c.field-meta.xml
<CustomField>
    <fullName>CofinsBase__c</fullName>
    <label>Base de Cofins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>