force-app/main/default/objects/InvoiceItems__c/fields/CofinsTaxSituation__c.field-meta.xml
<CustomField>
    <fullName>CofinsTaxSituation__c</fullName>
    <label>Situação Tributária Cofins</label>
    <length>255</length>
    <type>Text</type>
</CustomField>