force-app/main/default/objects/InvoiceItems__c/fields/CofinsValue__c.field-meta.xml
<CustomField>
    <fullName>CofinsValue__c</fullName>
    <label>Valor de Cofins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>