force-app/main/default/objects/InvoiceItems__c/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <label>Valor de Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>