force-app/main/default/objects/InvoiceItems__c/fields/fcpAliquot__c.field-meta.xml
<CustomField>
    <fullName>fcpAliquot__c</fullName>
    <label>Alíquota FCP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>