force-app/main/default/objects/InvoiceItems__c/fields/fcpBase__c.field-meta.xml
<CustomField>
    <fullName>fcpBase__c</fullName>
    <label>Base de FCP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>