force-app/main/default/objects/InvoiceItems__c/fields/fcpValue__c.field-meta.xml
<CustomField>
    <fullName>fcpValue__c</fullName>
    <label>Valor FCP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>