force-app/main/default/objects/InvoiceItems__c/fields/FreightValue__c.field-meta.xml
<CustomField>
    <fullName>FreightValue__c</fullName>
    <label>Valor de Frete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>