force-app/main/default/objects/InvoiceItems__c/fields/icmsAliquot__c.field-meta.xml
<CustomField>
    <fullName>icmsAliquot__c</fullName>
    <label>Alíquota ICMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>