force-app/main/default/objects/InvoiceItems__c/fields/icmsBase__c.field-meta.xml
<CustomField>
    <fullName>icmsBase__c</fullName>
    <label>Base de ICMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>