force-app/main/default/objects/InvoiceItems__c/fields/icmsTaxSituation__c.field-meta.xml
<CustomField>
    <fullName>icmsTaxSituation__c</fullName>
    <label>Situação Tributária do ICMS</label>
    <length>3</length>
    <type>Text</type>
</CustomField>