force-app/main/default/objects/InvoiceItems__c/fields/icmsValue__c.field-meta.xml
<CustomField>
    <fullName>icmsValue__c</fullName>
    <label>Valor do ICMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>