force-app/main/default/objects/InvoiceItems__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Nota Fiscal</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Itens da Nota Fiscal</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>