force-app/main/default/objects/InvoiceItems__c/fields/IpiAliquot__c.field-meta.xml
<CustomField>
    <fullName>IpiAliquot__c</fullName>
    <label>Alíquota de IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>