force-app/main/default/objects/InvoiceItems__c/fields/IpiBase__c.field-meta.xml
<CustomField>
    <fullName>IpiBase__c</fullName>
    <label>Base de IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>