force-app/main/default/objects/InvoiceItems__c/fields/IpiTaxSituation__c.field-meta.xml
<CustomField>
    <fullName>IpiTaxSituation__c</fullName>
    <label>Situação Tributária do IPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>