force-app/main/default/objects/InvoiceItems__c/fields/IpiValue__c.field-meta.xml
<CustomField>
    <fullName>IpiValue__c</fullName>
    <label>Valor de IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>