force-app/main/default/objects/InvoiceItems__c/fields/Ncm__c.field-meta.xml
<CustomField>
    <fullName>Ncm__c</fullName>
    <label>Ncm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>