force-app/main/default/objects/InvoiceItems__c/fields/pisAliquot__c.field-meta.xml
<CustomField>
    <fullName>pisAliquot__c</fullName>
    <label>PIS Alíquota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>