force-app/main/default/objects/InvoiceItems__c/fields/pisBase__c.field-meta.xml
<CustomField>
    <fullName>pisBase__c</fullName>
    <label>PIS Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>