force-app/main/default/objects/InvoiceItems__c/fields/pisTaxSituation__c.field-meta.xml
<CustomField>
    <fullName>pisTaxSituation__c</fullName>
    <label>Situação Tributária PIS</label>
    <length>3</length>
    <type>Text</type>
</CustomField>