force-app/main/default/objects/InvoiceItems__c/fields/pisValue__c.field-meta.xml
<CustomField>
    <fullName>pisValue__c</fullName>
    <label>PIS Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>