force-app/main/default/objects/InvoiceItems__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <label>Id do Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>