force-app/main/default/objects/InvoiceItems__c/fields/QuantityFiscal__c.field-meta.xml
<CustomField>
    <fullName>QuantityFiscal__c</fullName>
    <label>Quantidade Fiscal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>