force-app/main/default/objects/InvoiceItems__c/fields/QuantityPhisical__c.field-meta.xml
<CustomField>
    <fullName>QuantityPhisical__c</fullName>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>