force-app/main/default/objects/InvoiceItems__c/fields/sharingAliquotDestiny__c.field-meta.xml
<CustomField>
    <fullName>sharingAliquotDestiny__c</fullName>
    <label>Alíquota Destino ICMS Compartilhado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>