force-app/main/default/objects/InvoiceItems__c/fields/sharingAliquotOrigin__c.field-meta.xml
<CustomField>
    <fullName>sharingAliquotOrigin__c</fullName>
    <label>Alíquota Origem ICMS Compartilhado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>