force-app/main/default/objects/InvoiceItems__c/fields/sharingBaseValueDestiny__c.field-meta.xml
<CustomField>
    <fullName>sharingBaseValueDestiny__c</fullName>
    <label>Valor Base de Destino Compartilhado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>