force-app/main/default/objects/InvoiceItems__c/fields/sharingValueDestiny__c.field-meta.xml
<CustomField>
    <fullName>sharingValueDestiny__c</fullName>
    <label>Valor Destino Compartilhado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>