force-app/main/default/objects/InvoiceItems__c/fields/sharingValueOrigin__c.field-meta.xml
<CustomField>
    <fullName>sharingValueOrigin__c</fullName>
    <label>Valor Original Compartilhado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>