force-app/main/default/objects/InvoiceItems__c/fields/taxSituation__c.field-meta.xml
<CustomField>
    <fullName>taxSituation__c</fullName>
    <label>Situação da Taxa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>