force-app/main/default/objects/InvoiceItems__c/fields/UnitaryValue__c.field-meta.xml
<CustomField>
    <fullName>UnitaryValue__c</fullName>
    <label>Valor Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>