force-app/main/default/objects/InvoiceItems__c/fields/UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasurement__c</fullName>
    <label>Unidade de Medida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>